src/snapshots/app_db_schema__relate_ex__db_relate.snap
---
source: src/relate_ex.rs
expression: v
---
Ok(
    [
        Relation {
            id: Thing {
                tb: "identity",
                id: String(
                    "[UID]",
                ),
            },
            from: Thing {
                tb: "mobile",
                id: Number(
                    123,
                ),
            },
            with: Thing {
                tb: "account",
                id: String(
                    "hz",
                ),
            },
        },
    ],
)
