src/snapshots/app_db_schema__relate_ex__raw_db_relate.snap
---
source: src/relate_ex.rs
expression: v
---
[
    Object(
        Object(
            {
                "id": Thing(
                    Thing {
                        tb: "identity",
                        id: String(
                            "[UID]",
                        ),
                    },
                ),
                "in": Thing(
                    Thing {
                        tb: "mobile",
                        id: Number(
                            123,
                        ),
                    },
                ),
                "out": Thing(
                    Thing {
                        tb: "account",
                        id: String(
                            "hz",
                        ),
                    },
                ),
            },
        ),
    ),
]
